# ChangeLog for dev-perl/Moose
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Moose/ChangeLog,v 1.91 2011/11/18 15:25:55 tove Exp $

*Moose-2.40.100 (18 Nov 2011)

  18 Nov 2011; Torsten Veller <tove@gentoo.org> +Moose-2.40.100.ebuild:
  Version bump

*Moose-2.20.500 (25 Sep 2011)

  25 Sep 2011; Torsten Veller <tove@gentoo.org> +Moose-2.20.500.ebuild:
  Version bump

  24 Sep 2011; Fabian Groffen <grobian@gentoo.org> Moose-2.20.200.ebuild:
  Marked ~x64-macos

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Moose-0.92.ebuild,
  -Moose-1.19.ebuild, -Moose-1.250.0.ebuild, -Moose-2.1.0.ebuild:
  Cleanup

  13 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> Moose-1.240.ebuild:
  ppc stable wrt #350853

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -Moose-2.0.0.ebuild,
  -Moose-2.0.100.ebuild, -Moose-2.0.200.ebuild, -Moose-2.0.600.ebuild,
  -Moose-2.0.700.ebuild, -Moose-2.0.800.ebuild, -Moose-2.20.0.ebuild,
  -Moose-2.20.100.ebuild:
  Cleanup

*Moose-2.20.200 (26 Jul 2011)

  26 Jul 2011; Torsten Veller <tove@gentoo.org> +Moose-2.20.200.ebuild:
  Version bump

*Moose-2.20.100 (22 Jul 2011)

  22 Jul 2011; Torsten Veller <tove@gentoo.org> +Moose-2.20.100.ebuild:
  Version bump

*Moose-2.20.0 (19 Jul 2011)

  19 Jul 2011; Torsten Veller <tove@gentoo.org> +Moose-2.20.0.ebuild:
  Version bump

*Moose-2.1.0 (23 Jun 2011)

  23 Jun 2011; Torsten Veller <tove@gentoo.org> +Moose-2.1.0.ebuild:
  Version bump

*Moose-2.0.800 (17 Jun 2011)

  17 Jun 2011; Torsten Veller <tove@gentoo.org> +Moose-2.0.800.ebuild:
  Version bump

*Moose-2.0.700 (16 May 2011)

  16 May 2011; Torsten Veller <tove@gentoo.org> +Moose-2.0.700.ebuild:
  Version bump

*Moose-2.0.600 (12 May 2011)

  12 May 2011; Torsten Veller <tove@gentoo.org> +Moose-2.0.600.ebuild:
  Version bump

*Moose-2.0.200 (29 Apr 2011)

  29 Apr 2011; Torsten Veller <tove@gentoo.org> +Moose-2.0.200.ebuild:
  Version bump

*Moose-2.0.100 (23 Apr 2011)
