@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Moose
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Moose/ChangeLog,v 1.91 2011/11/18 15:25:55 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Moose/ChangeLog,v 1.92 2012/02/05 09:32:12 tove Exp $
+
+*Moose-2.40.200 (05 Feb 2012)
+
+  05 Feb 2012; Torsten Veller <tove@gentoo.org> +Moose-2.40.200.ebuild:
+  Version bump
 
 *Moose-2.40.100 (18 Nov 2011)
 
